--- a/tictactoe.css
+++ b/tictactoe.css
@@ -1,12 +1,12 @@
 
-.row {
+.roe {
   display: flex;
 }
 
-.col {
+.column {
   flex: 1;
   border: 1px solid black;
-  height: 100px;
+  height: 120px;
 }
 
 .space {
@@ -19,4 +19,10 @@
 .value {
   flex: 1;
   text-align: center;
+  font-size: 75px;
+  font-family: sans-serif;
+}
+
+.winner {
+  background: yellow;
 }
