--- a/tictactoe.css
+++ b/tictactoe.css
@@ -19,8 +19,12 @@
 .value {
   flex: 1;
   text-align: center;
-  font-size: 75px;
+  font-size: 60px;
   font-family: sans-serif;
+}
+
+.moves {
+  font-size: 15px;
 }
 
 .winner {
